# cvg-harness

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  setup.cfg
.claude/: settings.json
.cvg-harness/: current-run.txt  executors.json  run-index.json
docs/: 0001-visao-geral-do-cvg-harness.md  0002-auditoria-critica-do-planejamento-atual.md  0003-principios-operacionais.md  0004-matriz-fast-vs-enterprise.md  0005-arquitetura-operacional-corrigida.md  0006-agentes-e-responsabilidades.md  0007-contratos-dos-artefatos.md  0008-gates-e-politica-de-aprovacao.md  0009-politica-de-fallback-e-replanejamento.md  0010-progress-ledger-e-event-log.md  0011-spec-lint-architecture-guard-drift-detector.md  0012-readiness-execucao-real-e-integracao-futura.md  0013-roadmap-de-implementacao.md  0014-backlog-priorizado.md  0015-relatorio-final-de-correcao-do-planejamento.md  0016-backlog-executavel-de-correcao.md  0017-guia-operacional-para-fechar-divergencias.md  0018-sprint-02-checklist-e-patch-plan.md  0019-checklist-final-de-aprovacao.md  0020-sprint-03-consolidacao-documental.md  0021-sprint-04-observabilidade-e-event-log.md  0022-sprint-04-melhoria-de-demo-e-exemplos.md  0023-sprint-05-higienizacao-de-documentacao-residual.md  0024-sprint-06-runtime-metrics-e-hooking-operacional.md  0025-sprint-07-higienizacao-documentacao-restante.md  0026-sprint-08-higienizacao-estado-real-e-rastreabilidade-documental.md  0027-sprint-09-coerencia-telemetria-contratos.md  0028-relatorio-de-auditoria-do-estado-real.md  0029-sprint-10-fechamento-de-ciclo-e-coerencia-operacional.md  0030-sprint-11-fechamento-operacional-pos-release.md  0031-sprint-12-profundidade-dos-motores-de-planning.md  (+64 more)
tests/: test_flow.py  (+27 more)
(+109 files in other folders)
