[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cvg-harness"
version = "0.1.0"
description = "AI Coding Value Generation Harness - Framework operacional para demanda de software"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Ricardo Akinaga"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = []

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[project.scripts]
cvg = "cvg_harness.cli.cli:main"
cvg-repl = "cvg_harness.repl:main"

[tool.setuptools.packages.find]
where = ["src"]
