[metadata]
name = cvg-harness
version = 0.1.0
description = AI Coding Value Generation Harness
author = Ricardo Akinaga
license = MIT
platforms = any

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.10
install_requires =

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest
    pytest-cov

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_functions = test_*
addopts = -v --tb=short
filterwarnings =
    ignore::DeprecationWarning

[mypy]
python_version = 3.10
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = False
ignore_missing_imports = True

[flake8]
max-line-length = 100
exclude = .git,__pycache__,.pytest_cache,build,dist,*.egg-info
ignore = E203,W503
